fix collapse largeur et debut MEP cardDetails

--- a/src/components/Collapse/Collapse.module.css
+++ b/src/components/Collapse/Collapse.module.css
@@ -3,6 +3,7 @@
     flex-direction: column;
 
     row-gap: 0px;
+    width: 100%;
 }
 
 .collapse-header {
